@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 20-02-2006 added: some minor tweaks to party mode:  When first enabled, window switches to Now Playing window.
+			Better checking for the "Move" options in the Now Playing context menu since Party Mode takes over.
+			Added "Cancel Party Mode" option to Now Playing context menu.
  - 20-02-2006 fixed: Replaygain settings weren't being applied.
  - 20-02-2006 fixed: Musicoverlay visibility on Control.HasFocus() wasn't working.
  - 20-02-2006 changed: If no thumb is available, ListItem.Thumb uses the icon image.
